--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🌐 Universal Translator</h1>
+            <h1>🌐 Universal Translator uz</h1>
             <p>Professional translation powered by Google Translate</p>
         </div>
 
