--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🌐 Universal Translator</h1>
-            <p>Professional translation powered by Google Translate</p>
+            <h1>🌐 Universal Translator uz</h1>
+            <p>Professional translation powered by Fintechhub</p>
         </div>
 
         <div class="translator-panel">
